sass/theme/content/_lines.scss
.line-icon-overlap {
	position: absolute;
	top: -35px;
	left: 50%;
	transform: translateX(-50%);
	width: 75px;
	height: 75px;
	margin-top: 2rem;
		
	@media all and (max-width: $breakpoint-phone) {
		margin-bottom: 2rem;
	}	
}

.line {
	display: block;
	overflow: hidden;
	text-align: center; 
	color: $navy; 
	margin-left: -20vw;
	margin-right: -20vw;
	padding-top: 2rem;
	
	@media all and (max-width: $breakpoint-phone) {
		margin-left: -50vw;
		margin-right: -50vw;
	}
		
	&.shortened {
		margin-left: 12vw;
		margin-right: 12vw;			
	}
	
	&.green {
		color: $teal;
	}

	&.navy {
		color: $navy;
	}
		
	img {
	  vertical-align: middle;
	  width: 75px;
	}
}
 
.line--subsection img{
	border: 1px solid $navy;
	border-radius: 50%;
	padding: 3px;
}

.line:before, .line:after {
	content: "";
	display: inline-block;
	vertical-align: middle;
	position: relative;
	width: 50%;
	border-top-style: solid;
	border-top-width: 1px;
}

.line:before {
  right: -0.25em;
  margin-left: -50%;
}

.line:after {
  left: -0.25em;
  margin-right: -50%;
}

